--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   },
   "scripts": {
     "build": "NODE_ENV=production tsc",
-    "start": "node build/index.js",
+    "start": "node ./build/index.js",
     "lint": "eslint \"./src/**/*.ts\"",
     "lint:fix": "eslint --fix \"./src/**/*.ts\""
   },
