--- a/package.json
+++ b/package.json
@@ -2,14 +2,13 @@
   "name": "eco-bot",
   "version": "0.0.0",
   "description": "",
-  "main": "build/index.js",
   "engines": {
     "node": "16.x",
     "yarn": "3.1.1"
   },
   "scripts": {
     "build": "NODE_ENV=production tsc",
-    "start": "node ./build/index.js",
+    "start": "node dist/index.js",
     "lint": "eslint \"./src/**/*.ts\"",
     "lint:fix": "eslint --fix \"./src/**/*.ts\""
   },
